ppl4450Parser.py
# Generated from ppl4450.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ppl4450Parser ( Parser ):

    grammarFileName = "ppl4450.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'if'", 
                     "'elif'", "'else'", "'while'", "'for'", "'in'", "'='", 
                     "'+='", "'-='", "'*='", "'/='", "'<'", "'>'", "'<='", 
                     "'>='", "'=='", "'!='", "'and'", "'or'", "'not'", "'range'", 
                     "'['", "']'", "'('", "')'", "','", "':'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'\\t'", "'\\b'" ]

    symbolicNames = [ "<INVALID>", "PLU", "MIN", "MUL", "DIV", "MOD", "IF", 
                      "ELIF", "ELSE", "WH", "FOR", "IN", "EQU", "EQU_P", 
                      "EQU_MI", "EQU_MU", "EQU_D", "CLT", "CGT", "CLTE", 
                      "CGTE", "CEQU", "CNEQU", "AND", "OR", "NOT", "RAN", 
                      "BRA_O", "BRA_C", "PAR_O", "PAR_C", "COM", "COL", 
                      "ID", "STR", "INT", "FLO", "BOOL", "INDT", "OUTDT", 
                      "NL", "WS", "HCOM", "ACOM", "INDENT", "DEDENT" ]

    RULE_program = 0
    RULE_operation = 1
    RULE_assignment = 2
    RULE_expression = 3
    RULE_arithmetic = 4
    RULE_operator = 5
    RULE_elem = 6
    RULE_array = 7
    RULE_comparison = 8
    RULE_conditional = 9
    RULE_if_st = 10
    RULE_while_st = 11
    RULE_for_st = 12
    RULE_range = 13

    ruleNames =  [ "program", "operation", "assignment", "expression", "arithmetic", 
                   "operator", "elem", "array", "comparison", "conditional", 
                   "if_st", "while_st", "for_st", "range" ]

    EOF = Token.EOF
    PLU=1
    MIN=2
    MUL=3
    DIV=4
    MOD=5
    IF=6
    ELIF=7
    ELSE=8
    WH=9
    FOR=10
    IN=11
    EQU=12
    EQU_P=13
    EQU_MI=14
    EQU_MU=15
    EQU_D=16
    CLT=17
    CGT=18
    CLTE=19
    CGTE=20
    CEQU=21
    CNEQU=22
    AND=23
    OR=24
    NOT=25
    RAN=26
    BRA_O=27
    BRA_C=28
    PAR_O=29
    PAR_C=30
    COM=31
    COL=32
    ID=33
    STR=34
    INT=35
    FLO=36
    BOOL=37
    INDT=38
    OUTDT=39
    NL=40
    WS=41
    HCOM=42
    ACOM=43
    INDENT=44
    DEDENT=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ppl4450Parser.EOF, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(ppl4450Parser.NL)
            else:
                return self.getToken(ppl4450Parser.NL, i)

        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ppl4450Parser.OperationContext)
            else:
                return self.getTypedRuleContext(ppl4450Parser.OperationContext,i)


        def getRuleIndex(self):
            return ppl4450Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = ppl4450Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1366504244800) != 0):
                self.state = 30
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [40]:
                    self.state = 28
                    self.match(ppl4450Parser.NL)
                    pass
                elif token in [6, 9, 10, 25, 27, 29, 33, 34, 35, 36, 37]:
                    self.state = 29
                    self.operation()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 35
            self.match(ppl4450Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(ppl4450Parser.AssignmentContext,0)


        def expression(self):
            return self.getTypedRuleContext(ppl4450Parser.ExpressionContext,0)


        def if_st(self):
            return self.getTypedRuleContext(ppl4450Parser.If_stContext,0)


        def while_st(self):
            return self.getTypedRuleContext(ppl4450Parser.While_stContext,0)


        def for_st(self):
            return self.getTypedRuleContext(ppl4450Parser.For_stContext,0)


        def getRuleIndex(self):
            return ppl4450Parser.RULE_operation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperation" ):
                listener.enterOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperation" ):
                listener.exitOperation(self)




    def operation(self):

        localctx = ppl4450Parser.OperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_operation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 37
                self.assignment()
                pass

            elif la_ == 2:
                self.state = 38
                self.expression(0)
                pass

            elif la_ == 3:
                self.state = 39
                self.if_st()
                pass

            elif la_ == 4:
                self.state = 40
                self.while_st()
                pass

            elif la_ == 5:
                self.state = 41
                self.for_st()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ppl4450Parser.ID)
            else:
                return self.getToken(ppl4450Parser.ID, i)

        def EQU(self):
            return self.getToken(ppl4450Parser.EQU, 0)

        def expression(self):
            return self.getTypedRuleContext(ppl4450Parser.ExpressionContext,0)


        def EQU_P(self):
            return self.getToken(ppl4450Parser.EQU_P, 0)

        def EQU_MI(self):
            return self.getToken(ppl4450Parser.EQU_MI, 0)

        def EQU_MU(self):
            return self.getToken(ppl4450Parser.EQU_MU, 0)

        def EQU_D(self):
            return self.getToken(ppl4450Parser.EQU_D, 0)

        def getRuleIndex(self):
            return ppl4450Parser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = ppl4450Parser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.match(ppl4450Parser.ID)
                self.state = 45
                self.match(ppl4450Parser.EQU)
                self.state = 48
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 46
                    self.match(ppl4450Parser.ID)
                    pass

                elif la_ == 2:
                    self.state = 47
                    self.expression(0)
                    pass


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.match(ppl4450Parser.ID)
                self.state = 51
                self.match(ppl4450Parser.EQU_P)
                self.state = 54
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 52
                    self.match(ppl4450Parser.ID)
                    pass

                elif la_ == 2:
                    self.state = 53
                    self.expression(0)
                    pass


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                self.match(ppl4450Parser.ID)
                self.state = 57
                self.match(ppl4450Parser.EQU_MI)
                self.state = 60
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 58
                    self.match(ppl4450Parser.ID)
                    pass

                elif la_ == 2:
                    self.state = 59
                    self.expression(0)
                    pass


                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 62
                self.match(ppl4450Parser.ID)
                self.state = 63
                self.match(ppl4450Parser.EQU_MU)
                self.state = 66
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 64
                    self.match(ppl4450Parser.ID)
                    pass

                elif la_ == 2:
                    self.state = 65
                    self.expression(0)
                    pass


                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 68
                self.match(ppl4450Parser.ID)
                self.state = 69
                self.match(ppl4450Parser.EQU_D)
                self.state = 72
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 70
                    self.match(ppl4450Parser.ID)
                    pass

                elif la_ == 2:
                    self.state = 71
                    self.expression(0)
                    pass


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmetic(self):
            return self.getTypedRuleContext(ppl4450Parser.ArithmeticContext,0)


        def conditional(self):
            return self.getTypedRuleContext(ppl4450Parser.ConditionalContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ppl4450Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ppl4450Parser.ExpressionContext,i)


        def AND(self):
            return self.getToken(ppl4450Parser.AND, 0)

        def OR(self):
            return self.getToken(ppl4450Parser.OR, 0)

        def getRuleIndex(self):
            return ppl4450Parser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ppl4450Parser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 77
                self.arithmetic()
                pass

            elif la_ == 2:
                self.state = 78
                self.conditional()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 86
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ppl4450Parser.ExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                    self.state = 81
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 82
                    _la = self._input.LA(1)
                    if not(_la==23 or _la==24):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 83
                    self.expression(2) 
                self.state = 88
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ArithmeticContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ppl4450Parser.OperatorContext)
            else:
                return self.getTypedRuleContext(ppl4450Parser.OperatorContext,i)


        def PLU(self, i:int=None):
            if i is None:
                return self.getTokens(ppl4450Parser.PLU)
            else:
                return self.getToken(ppl4450Parser.PLU, i)

        def MIN(self, i:int=None):
            if i is None:
                return self.getTokens(ppl4450Parser.MIN)
            else:
                return self.getToken(ppl4450Parser.MIN, i)

        def getRuleIndex(self):
            return ppl4450Parser.RULE_arithmetic

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmetic" ):
                listener.enterArithmetic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmetic" ):
                listener.exitArithmetic(self)




    def arithmetic(self):

        localctx = ppl4450Parser.ArithmeticContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arithmetic)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.operator()
            self.state = 94
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 90
                    _la = self._input.LA(1)
                    if not(_la==1 or _la==2):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 91
                    self.operator() 
                self.state = 96
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ppl4450Parser.ElemContext)
            else:
                return self.getTypedRuleContext(ppl4450Parser.ElemContext,i)


        def MUL(self, i:int=None):
            if i is None:
                return self.getTokens(ppl4450Parser.MUL)
            else:
                return self.getToken(ppl4450Parser.MUL, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(ppl4450Parser.DIV)
            else:
                return self.getToken(ppl4450Parser.DIV, i)

        def MOD(self, i:int=None):
            if i is None:
                return self.getTokens(ppl4450Parser.MOD)
            else:
                return self.getToken(ppl4450Parser.MOD, i)

        def getRuleIndex(self):
            return ppl4450Parser.RULE_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator" ):
                listener.enterOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator" ):
                listener.exitOperator(self)




    def operator(self):

        localctx = ppl4450Parser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.elem()
            self.state = 102
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 98
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 56) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 99
                    self.elem() 
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ppl4450Parser.ID, 0)

        def BRA_O(self):
            return self.getToken(ppl4450Parser.BRA_O, 0)

        def expression(self):
            return self.getTypedRuleContext(ppl4450Parser.ExpressionContext,0)


        def BRA_C(self):
            return self.getToken(ppl4450Parser.BRA_C, 0)

        def array(self):
            return self.getTypedRuleContext(ppl4450Parser.ArrayContext,0)


        def INT(self):
            return self.getToken(ppl4450Parser.INT, 0)

        def FLO(self):
            return self.getToken(ppl4450Parser.FLO, 0)

        def STR(self):
            return self.getToken(ppl4450Parser.STR, 0)

        def BOOL(self):
            return self.getToken(ppl4450Parser.BOOL, 0)

        def getRuleIndex(self):
            return ppl4450Parser.RULE_elem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElem" ):
                listener.enterElem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElem" ):
                listener.exitElem(self)




    def elem(self):

        localctx = ppl4450Parser.ElemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_elem)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(ppl4450Parser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(ppl4450Parser.ID)
                self.state = 107
                self.match(ppl4450Parser.BRA_O)
                self.state = 108
                self.expression(0)
                self.state = 109
                self.match(ppl4450Parser.BRA_C)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 111
                self.array()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 112
                self.match(ppl4450Parser.INT)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 113
                self.match(ppl4450Parser.FLO)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 114
                self.match(ppl4450Parser.STR)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 115
                self.match(ppl4450Parser.BOOL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BRA_O(self):
            return self.getToken(ppl4450Parser.BRA_O, 0)

        def BRA_C(self):
            return self.getToken(ppl4450Parser.BRA_C, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ppl4450Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ppl4450Parser.ExpressionContext,i)


        def COM(self, i:int=None):
            if i is None:
                return self.getTokens(ppl4450Parser.COM)
            else:
                return self.getToken(ppl4450Parser.COM, i)

        def getRuleIndex(self):
            return ppl4450Parser.RULE_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray" ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray" ):
                listener.exitArray(self)




    def array(self):

        localctx = ppl4450Parser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(ppl4450Parser.BRA_O)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 266992615424) != 0):
                self.state = 119
                self.expression(0)
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==31:
                    self.state = 120
                    self.match(ppl4450Parser.COM)
                    self.state = 121
                    self.expression(0)
                    self.state = 126
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 129
            self.match(ppl4450Parser.BRA_C)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conditional(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ppl4450Parser.ConditionalContext)
            else:
                return self.getTypedRuleContext(ppl4450Parser.ConditionalContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(ppl4450Parser.AND)
            else:
                return self.getToken(ppl4450Parser.AND, i)

        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(ppl4450Parser.OR)
            else:
                return self.getToken(ppl4450Parser.OR, i)

        def getRuleIndex(self):
            return ppl4450Parser.RULE_comparison

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison" ):
                listener.enterComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison" ):
                listener.exitComparison(self)




    def comparison(self):

        localctx = ppl4450Parser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_comparison)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.conditional()
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23 or _la==24:
                self.state = 132
                _la = self._input.LA(1)
                if not(_la==23 or _la==24):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 133
                self.conditional()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmetic(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ppl4450Parser.ArithmeticContext)
            else:
                return self.getTypedRuleContext(ppl4450Parser.ArithmeticContext,i)


        def CLT(self, i:int=None):
            if i is None:
                return self.getTokens(ppl4450Parser.CLT)
            else:
                return self.getToken(ppl4450Parser.CLT, i)

        def CGT(self, i:int=None):
            if i is None:
                return self.getTokens(ppl4450Parser.CGT)
            else:
                return self.getToken(ppl4450Parser.CGT, i)

        def CLTE(self, i:int=None):
            if i is None:
                return self.getTokens(ppl4450Parser.CLTE)
            else:
                return self.getToken(ppl4450Parser.CLTE, i)

        def CGTE(self, i:int=None):
            if i is None:
                return self.getTokens(ppl4450Parser.CGTE)
            else:
                return self.getToken(ppl4450Parser.CGTE, i)

        def CEQU(self, i:int=None):
            if i is None:
                return self.getTokens(ppl4450Parser.CEQU)
            else:
                return self.getToken(ppl4450Parser.CEQU, i)

        def CNEQU(self, i:int=None):
            if i is None:
                return self.getTokens(ppl4450Parser.CNEQU)
            else:
                return self.getToken(ppl4450Parser.CNEQU, i)

        def PAR_O(self):
            return self.getToken(ppl4450Parser.PAR_O, 0)

        def NOT(self):
            return self.getToken(ppl4450Parser.NOT, 0)

        def PAR_C(self):
            return self.getToken(ppl4450Parser.PAR_C, 0)

        def getRuleIndex(self):
            return ppl4450Parser.RULE_conditional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditional" ):
                listener.enterConditional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditional" ):
                listener.exitConditional(self)




    def conditional(self):

        localctx = ppl4450Parser.ConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_conditional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 139
                self.match(ppl4450Parser.PAR_O)



            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 142
                self.match(ppl4450Parser.NOT)


            self.state = 145
            self.arithmetic()
            self.state = 150
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 146
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 8257536) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 147
                    self.arithmetic() 
                self.state = 152
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                self.state = 153
                self.match(ppl4450Parser.PAR_C)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(ppl4450Parser.IF, 0)
